@@ -12,7 +12,7 @@
     "jquery-mousewheel": "3.1.13",
     "jquery-ui": "1.12.1",
     "jquery-ui-timepicker-addon": "1.6.3",
-    "jquery-validation": "1.17.0",
+    "jquery-validation": "1.19.1",
     "jquery.event.drag": "2.2.2",
     "js-cookie": "2.2.0",
     "tracekit": "0.4.5",
